--- a/src/blocks/form/__input-error/form__input-error.css
+++ b/src/blocks/form/__input-error/form__input-error.css
@@ -1,6 +1,7 @@
 .form__input-error {
     display: block;
     visibility: hidden;
+    opacity: 0;
     min-height: 30px;
     font-style: normal;
     font-weight: 400;
