--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,6 +2,7 @@
     display: flex;
     visibility: hidden;
     opacity: 0;
+    z-index: -100;
     transition: visibility 0.5s ease, opacity 0.5s ease;
     background-color: rgba(0,0,0,0.5);
     position: fixed;
